<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:scaleType="center"
        android:text="@string/timelog_addtitle"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/timelog_taskName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/timelog_taskName" />
    <EditText
        android:id="@+id/timelog_taskDescription"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/timelog_taskDescription" />
    <EditText
        android:id="@+id/timelog_fromTime"
        android:inputType="time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/timelog_fromTime" />
    <EditText
        android:id="@+id/timelog_toTime"
        android:inputType="time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/timelog_toTime" />
</LinearLayout>