<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:scaleType="center"
        android:text="@string/todo_addtitle"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/todo_addTitle"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/todo_addTitle" />
    <Button
        android:id="@+id/todo_takePhoto"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:contentDescription="@string/todo_viewPhoto"
        android:background="@drawable/take_photo"
        android:onClick="takeAPhoto"/>
</LinearLayout>