<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:fontFamily="Helvetica">

        <TextView
            android:id="@+id/title_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help_title"/>

        <View
            android:id="@+id/hr_help"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/intro_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_intro"/>

        <!-- Text for TODOLIST Section -->
        <TextView
            android:id="@+id/todo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_todo"
            android:visibility="gone"/>

        <!-- Text for TIMELOG Section -->
        <TextView
            android:id="@+id/timelog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_timelog"
            android:visibility="gone"/>

        <!-- Text for EXPENSES Section -->
        <TextView
            android:id="@+id/expense_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_expense"
            android:visibility="gone"/>

        <!-- Text for EXERCISE Section -->
        <TextView
            android:id="@+id/exercise_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_exercise"
            android:visibility="gone"/>

        <!-- Button to get back to Activity screen -->
        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/back_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/alert"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</ScrollView>